[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senfoniscan"
version = "3.0.1"
description = "AI-Powered Passive Reconnaissance CLI Tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SenfoniScan", email = "info@senfoniscan.com" }]
requires-python = ">=3.10"
keywords = ["cybersecurity", "recon", "osint", "passive", "reconnaissance", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "dnspython>=2.4",
    "aiohttp>=3.9",
    "playwright>=1.40",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "shodan>=1.28",
    "ollama>=0.1",
    "openai>=1.0",
    "ipwhois>=1.2.0",
    "python-whois>=0.8.0",
]

[project.scripts]
senfoniscan = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
